--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-hacker
+title: Blog de clase para la materia de Tecnologías para el desarrollo de aplicaciones web.
+author: Santiago Gutiérrez, Santiago Henao, Angie Dahiana Vargas, Luisa María Zapata.
