--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-hacker
-title: Blog de clase para la materia de Tecnologías para el desarrollo de aplicaciones web.
+title: Blog de clase: Tecnologías para el desarrollo de aplicaciones web
